[tool.poetry]
name = "reversegrpc"
version = "0.1.0"
description = "Reverse a GRPC library to its .proto definition"
authors = ["Florian Doyon <florian.doyon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
grpcio= "^1.41.1"
grpcio-tools="^1.41.1"
protobuf="^3.19.3"
retrying="^1.3.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
